web/css/details.css
.title {
    text-align: center;
}

.round {
    border-radius: 5px;
    border-color: rgb(169, 169, 169);
    border-width: 1px;
}

#adv-set {
    background-color: rgb(0, 117, 66);
    border: none;
    border-radius: 8px;
    color: white;
    padding: 5px 10px;
    margin: 5px 0px;
    font-size: 13px;
    text-decoration: none;
    cursor: pointer;
}

#op-req {
    min-width: 100px;
    width: 14%;
    padding: 5px;
}

#url-req {
    width: 85%;
    padding: 5px;
}

#error-req {
    color: red;
    font-size: small;
    margin: 5px 0px;
}

#body-req {
    resize: none;
    width: 100%;
    height: 150px;
    margin: 10px 0px;
}

#accept-req {
    background-color: rgb(9, 65, 41);
    border: none;
    border-radius: 8px;
    color: white;
    padding: 15px 30px;
    margin: 5px 0px;
    font-size: 16px;
    text-decoration: none;
    cursor: pointer;
}

button:hover {
    opacity: 0.8;
}

#output {
    margin: 15px;

    /* Initially hidden */
    display: none;
}

#output div {
    background-color: rgb(171, 207, 192);
    border-radius: 20px;
    padding: 10px;
    margin: 5px 0px;
    overflow-x: auto;
    white-space: nowrap;
}

